# coagent-web3

./: README.md  pyproject.toml
coagent_web3/: __init__.py  application.py  builder.py  service.py
coagent_web3/plugins/: a2a.py  telegram.py
example/: README.md  character.sample.json  specification.sample.json
